# fm-training-estimator

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  Makefile  README.md  launch_estimator.py  pyproject.toml  requirements.txt  setup.py  tox.ini  tox.sh
.github/workflows/: build-and-push.yml
adrs/: 001-estimator-api.md  001-resource-estimator-library.md
docs/: modules.rst
docs/source/: conf.py  index.rst
fm_training_estimator/config/: __init__.py  arguments.py  parser.py  test_parser.py  test_utils.py  utils.py
fm_training_estimator/config/test_configs/: config1.json  config2.json  config3.json  config4.json
fm_training_estimator/data/: README.md  __init__.py  manager.py
fm_training_estimator/memory/: __init__.py
fm_training_estimator/memory/fsdp/: __init__.py  fsdp.py  test_fsdp.py
fm_training_estimator/memory/full/: README.md  __init__.py  full.py  test_full.py
fm_training_estimator/memory/hybrid/: README.md  __init__.py  hybrid.py  hybrid_test.py
fm_training_estimator/memory/lora/: __init__.py  hybrid.py  lora.py  test_lora.py
fm_training_estimator/memory/qlora/: __init__.py  hybrid.py  qlora.py  test_qlora.py
fm_training_estimator/regressor/: README.md  __init__.py  dispatch.py
fm_training_estimator/regressor/arise/: README.md  __init__.py  arise.py  train.py
fm_training_estimator/regressor/linear/: __init__.py  linear.py  train.py
fm_training_estimator/regressor/lookup/: __init__.py  lookup.py  test_lookup.py
fm_training_estimator/regressor/min_gpu/: __init__.py  min_gpu_recommender.py  recommender.py  test_recommender.py
fm_training_estimator/regressor/test_data/: data1.csv  data2.csv  data3.csv
fm_training_estimator/regressor/xgboost/: README.md  __init__.py  test_reg.py  train.py  xgboost.py
fm_training_estimator/sdk/: README.md  __init__.py  sdk.py
fm_training_estimator/sdk/examples/: ex1.py
fm_training_estimator/throughput/mock/: mock.py  (+2 more)
fm_training_estimator/time/: README.md  __init__.py  time.py
fm_training_estimator/tokens/: README.md  __init__.py  te.py
fm_training_estimator/ui/: README.md  __init__.py  api.py  cli.py  core.py  model_whitelist.txt  web.py
fm_training_estimator/utils/: __init__.py  model.py  test_model.py  utils.py
(+16 files in other folders)
