[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fm_training_estimator"
dynamic = ["version"]
authors = [
  { name="Angel Luu", email="angel.luu@us.ibm.com" },
  { name="Chander Govindarajan", email="mail@chandergovind.org" },
]
description = "A package of Estimators for Large Language Model Training."
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  "tox",
  "pre-commit",
  "transformers",
  "peft",
  "setuptools",
  "fire",
  "pandas",
  "xgboost",
  "scikit-learn<1.6.0",
  "gradio",
  "datasets",
  "dataclass-wizard",
  "uvicorn"
]

[project.urls]
Source = "https://github.com/foundation-model-stack/fm-training-estimator"


[project.optional-dependencies]
dev-docs = [
    "sphinx>=4.0.2,<8.0",
    "sphinx-autoapi>=2.1.0",
    "sphinx-rtd-theme>=1.2.1,<2.1.0",
]

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*", "test_*.py"]
namespaces = false

[tool.setuptools_scm]
version_file = "fm_training_estimator/_version.py"